k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: wisecow-deployment
  labels:
    app: wisecow

spec:
  replicas: 1

  selector:
    matchLabels:
      app: wisecow

  template:
    metadata:
      labels:
        app: wisecow

    spec:
      containers:
        - name: wisecow
          image: wisecow:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 4499
